8280054: BadSerializationTest and DragGestureEvent/DragGestureRecognizer constructors